# Frugi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: stm_arm_gcc.cmake
docs/: bsp.md  bsp_code.md  dae.md  dae_code.md  frugi.md  frugi_params.md  midi_code.md  params_code.md
docs/assets/diagrams/: bsp_call_flow.drawio  dae_flow.mermaid
source/: CMakeLists.txt  main.c  tasks.c
source/bsp/core/: FreeRTOSConfig.h  core_board.c  core_board.h  trace.h
source/bsp/middleware/FreeRTOS/Source/CMSIS_RTOS/: cmsis_os.c
source/bsp/middleware/Segger/Config/: SEGGER_RTT_Conf.h
source/bsp/middleware/Segger/SysView/: SEGGER_SYSVIEW_ConfDefaults.h
source/bsp/stm32f411-blackpill/: README.md  board.c  board.h
source/bsp/stm32f411-disco/: README.md  STM32F411VEHX_FLASH.ld  board.c  board.h  cs43l22.c
source/dae/: dae.c  dae.h  dsp_core.c  dsp_core.h  dsp_math.c  dsp_math.h  midi.c  midi.h  param_store.c  params.c  params.h
source/synth/: amp.c  amp.h  env_gen.c  env_gen.h  filter.c  filter.h  frugi_amp.c  frugi_amp.h  frugi_env_gen.c  frugi_env_gen.h  frugi_filter.c  frugi_filter.h  frugi_lfo.c  frugi_lfo.h  frugi_noise.c  frugi_noise.h  frugi_osc.c  frugi_osc.h  frugi_params.c  frugi_params.h  frugi_synth.c  frugi_synth.h  frugi_voice.c  frugi_voice.h  lfo.c  lfo.h  osc.c  osc.h  params.c  params.h  synth.c  synth.h  tasks.c  voice.c  voice.h
source/synth/ui/: ui.c  ui.h
